# OpenGL-shader-lib

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/assets/shaders/: test.fs  test.vs
example/src/: main.cpp
include/OpenGL-shader-lib/: OpenGL-shader-lib.hpp
src/: OpenGL-shader-lib.cpp
